refactor: using i18n messages for validation and refactor ApiResponse and ErrorResponse