@@ -6,24 +6,34 @@ import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.experimental.FieldDefaults;
 
+import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 @Getter
-@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 @JsonInclude(JsonInclude.Include.NON_NULL)
+@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class BusinessException extends RuntimeException {
     ErrorCode errorCode;
-    Map<String, Object> data;
+    Object[] args;
+    Map<String, List<String>> fieldErrors;
 
     public BusinessException(ErrorCode errorCode) {
-        super(errorCode.getMessage());
-        this.errorCode = errorCode;
-        this.data = Map.of();
+        this(errorCode, null, Collections.emptyMap());
     }
 
-    public BusinessException(ErrorCode errorCode, Map<String, Object> data) {
-        super(errorCode.getMessage());
+    public BusinessException(ErrorCode errorCode, Object... args) {
+        this(errorCode, args, Collections.emptyMap());
+    }
+
+    public BusinessException(ErrorCode errorCode, Map<String, List<String>> fieldErrors) {
+        this(errorCode, null, fieldErrors);
+    }
+
+    public BusinessException(ErrorCode errorCode, Object[] args, Map<String, List<String>> fieldErrors) {
+        super(errorCode.getMessageKey());
         this.errorCode = errorCode;
-        this.data = data;
+        this.args = args;
+        this.fieldErrors = fieldErrors;
     }
 }
